// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CurrencyText /> should render the Currency Text 1`] = `
<CurrencyText
  isPrefixFormatted={false}
  prefix="AUD"
  value={1000}
>
  <styled.span>
    <span
      className=""
    >
      AUD
       
      1,000
    </span>
  </styled.span>
</CurrencyText>
`;

exports[`<CurrencyText /> should render the Currency Text with isPrefixFormatted being true 1`] = `
.c0 .currency-prefix {
  font-size: 24px;
  line-height: 32px;
  font-weight: 600;
  position: relative;
  margin-right: .25rem;
  bottom: .25rem;
}

<CurrencyText
  isPrefixFormatted={true}
  prefix="AUD"
  prefixType="large"
  value={1000}
>
  <styled.span
    prefixType="large"
  >
    <span
      className="c0"
    >
      <span
        className="currency-prefix"
      >
        AUD
      </span>
       
      1,000
    </span>
  </styled.span>
</CurrencyText>
`;
